<resources>
    <string name="app_name">Quiz</string>
    <string name="emaill">Email</string>
    <string name="Login">Login</string>
    <string name="Text">Create new account</string>
    <string name="pass">Password</string>
    <string name="Sign">Sign In</string>
    <string name="Text2">Already have account?</string>
    <string name="name">Name</string>
    <string name="reg">Mobile No.</string>
    <string name="play">Start Quiz</string>
    <string name="delete">Delete Account</string>
    <string name="exit">Sign Out</string>
    <string name="google">Register with Google</string>
    <string name="facebook_app_id">859229217822538</string>
    <string name="fb_login_protocol_scheme">fb859229217822538</string>
    <string name="fb">Register with Facebook</string>
    <string name="Text3">Or \nSign In with </string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>

    <string name="num">TextView</string>
    <string name="SCORE">SCORE</string>
    <string name="marks">5/10</string>
    <string name="DONE">DONE</string>

</resources>
