<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity">


    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="97dp"

        android:layout_marginBottom="374dp"
        android:background="@drawable/roundededit"
        android:backgroundTint="#004385"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/pass"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="5dip"
        android:textColorHint="#FCF8F8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@id/editText3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="436dp"
        android:background="@drawable/roundededit"
        android:backgroundTint="#004385"
        android:drawableStart="@drawable/ic_person_black_24dp"

        android:ems="10"
        android:hint="@string/emaill"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:textColorHint="#FAF7F7"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="497dp"

        android:background="@drawable/roundededit"
        android:backgroundTint="#004385"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName|text"
        android:padding="5dip"
        android:textColorHint="#FCF8F8"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="308dp"

        android:background="@drawable/roundededit"
        android:backgroundTint="#004385"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:ems="10"
        android:hint="@string/reg"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:padding="5dip"
        android:textColorHint="#FCF8F8"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="232dp"
        android:background="@drawable/roundededit"
        android:backgroundTint="#F33757"
        android:text="@string/Sign"
        android:textColor="#F8FFFFFF"
        android:textSize="18sp" />

    <TextView

        android:id="@+id/textView2"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="191dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/Text2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.674" />

</RelativeLayout>



